--- a/BrickGame.html
+++ b/BrickGame.html
@@ -29,7 +29,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>Simple Brick Game</h1>
+      <h1>Simple Brick Game</h1><br><h1>From Bhanuka</h1>
       <div class="info">
         <div class="chip">Score: <span id="score">0</span></div>
         <div class="chip">Lives: <span id="lives">3</span></div>
@@ -331,3 +331,4 @@
   </script>
 </body>
 </html>
+
